--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@types/b_": "^1.3.2"
+    "@types/b_": "^1.3.2",
+    "@types/xml2js": "^0.4.9"
   }
 }
